--- a/MiniMix/Base.lproj/Main.storyboard
+++ b/MiniMix/Base.lproj/Main.storyboard
@@ -928,20 +928,100 @@
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fg9-Za-yzf">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="48" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fg9-Za-yzf">
+                                <rect key="frame" x="0.0" y="64" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchCell" rowHeight="48" id="0Ns-2s-F48" customClass="SearchSongsCell" customModule="MiniMix" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="48"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0Ns-2s-F48" id="FGq-6Y-MQB">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="47.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7t1-dt-rc8">
+                                                    <rect key="frame" x="84" y="8" width="456" height="32"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="32" id="XL1-6a-Eun"/>
+                                                        <constraint firstAttribute="width" constant="234" id="dej-7W-qN5"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="dej-7W-qN5"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRE-oV-0VJ">
+                                                    <rect key="frame" x="18" y="7" width="46" height="32"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="46" id="HMW-Cp-ZqL"/>
+                                                        <constraint firstAttribute="height" constant="32" id="IEn-71-DVk"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button" image="bigPlay"/>
+                                                    <connections>
+                                                        <action selector="playMix" destination="0Ns-2s-F48" eventType="touchUpInside" id="ns4-X1-LiP"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilc-zL-mQp">
+                                                    <rect key="frame" x="550" y="9" width="32" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="3ks-No-97L"/>
+                                                        <constraint firstAttribute="width" constant="32" id="Aid-5c-Dga"/>
+                                                    </constraints>
+                                                    <state key="normal" image="cloudUpload"/>
+                                                    <connections>
+                                                        <action selector="downloadSong" destination="0Ns-2s-F48" eventType="touchUpInside" id="Fu5-Ch-HGm"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ilc-zL-mQp" firstAttribute="centerY" secondItem="FGq-6Y-MQB" secondAttribute="centerY" id="31Q-yQ-AOj"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ilc-zL-mQp" secondAttribute="trailing" constant="10" id="8DI-XM-dmx"/>
+                                                <constraint firstItem="oRE-oV-0VJ" firstAttribute="centerY" secondItem="FGq-6Y-MQB" secondAttribute="centerY" id="QHd-Lw-r9J"/>
+                                                <constraint firstItem="oRE-oV-0VJ" firstAttribute="leading" secondItem="FGq-6Y-MQB" secondAttribute="leadingMargin" constant="10" id="Qy3-lm-OCD"/>
+                                                <constraint firstItem="7t1-dt-rc8" firstAttribute="leading" secondItem="oRE-oV-0VJ" secondAttribute="trailing" constant="20" id="gBA-jE-8fO"/>
+                                                <constraint firstItem="ilc-zL-mQp" firstAttribute="leading" secondItem="7t1-dt-rc8" secondAttribute="trailing" constant="10" id="jsk-sS-Ghg"/>
+                                                <constraint firstItem="7t1-dt-rc8" firstAttribute="centerY" secondItem="FGq-6Y-MQB" secondAttribute="centerY" id="uTM-xc-ls5"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="displayLabel" destination="7t1-dt-rc8" id="7lA-7g-rcH"/>
+                                            <outlet property="playButton" destination="oRE-oV-0VJ" id="JGT-Cj-Mgt"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qf6-ak-9LT">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="vmr-Wh-tJQ"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="0Mv-h1-p3p"/>
+                                    <barButtonItem systemItem="cancel" id="wvM-7g-dLM">
+                                        <connections>
+                                            <action selector="cancelSearching" destination="2TC-EV-aoN" id="Su6-lT-SP8"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ubk-tU-1Zl"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="iw7-1E-R6l" secondAttribute="trailing" constant="-20" id="0Yw-WK-cn5"/>
                             <constraint firstItem="fg9-Za-yzf" firstAttribute="top" secondItem="iw7-1E-R6l" secondAttribute="bottom" id="20O-O7-50C"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qf6-ak-9LT" secondAttribute="trailing" constant="-20" id="2mc-t2-gZE"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="qf6-ak-9LT" secondAttribute="bottom" id="3Z8-D3-wdB"/>
                             <constraint firstItem="FW9-NB-B0P" firstAttribute="top" secondItem="fg9-Za-yzf" secondAttribute="bottom" id="442-tB-0av"/>
                             <constraint firstItem="fg9-Za-yzf" firstAttribute="top" secondItem="iw7-1E-R6l" secondAttribute="bottom" id="OPk-se-5pT"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fg9-Za-yzf" secondAttribute="trailing" constant="-20" id="P7A-Lf-yBo"/>
+                            <constraint firstItem="qf6-ak-9LT" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="SVy-V6-J1u"/>
                             <constraint firstItem="fg9-Za-yzf" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="TM9-su-Qs3"/>
-                            <constraint firstItem="FW9-NB-B0P" firstAttribute="top" secondItem="fg9-Za-yzf" secondAttribute="bottom" id="VTI-k8-IxB"/>
+                            <constraint firstItem="qf6-ak-9LT" firstAttribute="top" secondItem="fg9-Za-yzf" secondAttribute="bottom" id="jqT-oo-WOJ"/>
                             <constraint firstItem="fg9-Za-yzf" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="rdY-Ul-CIX"/>
                             <constraint firstItem="iw7-1E-R6l" firstAttribute="top" secondItem="8zH-OS-Dhg" secondAttribute="bottom" id="tU9-DZ-dKC"/>
                             <constraint firstItem="iw7-1E-R6l" firstAttribute="leading" secondItem="rVF-MG-HoR" secondAttribute="leadingMargin" constant="-20" id="yNL-LK-dDo"/>
@@ -1119,6 +1199,7 @@
         <image name="StarFull" width="22" height="22"/>
         <image name="bigPlay" width="32" height="32"/>
         <image name="bigStop" width="256" height="256"/>
+        <image name="cloudUpload" width="256" height="256"/>
         <image name="erase" width="24" height="24"/>
         <image name="play" width="64" height="64"/>
         <image name="record" width="32" height="32"/>
